# auth-rs

./: Cargo.toml  README.md  build.rs  cliff.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: clean-cache.yml  release.yml
src/: browser.rs  client.rs  desktop.rs  env.rs  error.rs  main.rs
