[package]
name = "auth-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
console = "0.16.0"
exec = "0.3.1"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
log = "0.4"
env_logger = "0.11.8"
miette = { version = "7.0", features = ["fancy"] }
pkce = "0.2.0"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tao = "0.34.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
wry = "0.52.1"
dirs = "6.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
